<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="textViewMsg">Look at my GUI</string>
    <string name="flagButtonText">Click Here</string>
    <string name="checkBoxText">Check this out!</string>
    <string name="switchText">Switch on / off</string>
    <string name="hint_message">Type here</string>
    <string name="emailTextView">Enter your email address:</string>
    <string name="emailTextEdit">Type email here</string>
    <string name="passwordTextView">Type your password:</string>
    <string name="loginButton">LOGIN</string>
    <string name="yourProfile">Your profile</string>
    <string name="yourName">Your name:</string>
    <string name="enterYourName">Enter your name</string>
    <string name="yourEmail">Your email:</string>
    <string name="enterYourEmail">Enter your email</string>
    <string name="yourPicture">Your picture:</string>
    <string name="clickButtonAbove">Click the button above to take a picture</string>
    <string name="go_to_chat">Go to chat</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="weather">Weather Forecast</string>
    <string name="go_to_toolbar">Go to Toolbar page</string>
    <string name="item1">Choice 1</string>
    <string name="item2">Choice 2</string>
    <string name="item3">Choice 3</string>
    <string name="new_message">What is your new message?</string>
</resources>
