<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/textViewMsg"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:text="@string/flagButtonText" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_toEndOf="@id/button2"
        android:layout_alignParentEnd="true"
        android:text="@string/checkBoxText" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        android:src="@drawable/flag"/>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        android:layout_toEndOf="@id/imageButton"
        android:layout_alignParentEnd="true"
        android:text="@string/switchText" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="textPersonName"
        android:hint="@string/hint_message"/>

</RelativeLayout>